Widgets for views of software, software-mpi, workflows, project dropdown everywhere with session variable, fixed broken css in admin/users/roles_and_permissions admin/user-visit-log, instructions in software, workflow

--- a/web/css/workflow/index.css
+++ b/web/css/workflow/index.css
@@ -120,12 +120,7 @@
 	vertical-align:middle;
 }
 
-.project-dropdown
-{
-	margin-top:10px;
-	font-size:12px;
 
-}
 .project-dropdown-label
 {
 	font-weight:500;
